--- a/D6/index.html
+++ b/D6/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">Header</div>
+    <main class="content">Content</main>
+    <footer class="footer">Footer</footer>
 </body>
 </html>
