--- a/D6/index.html
+++ b/D6/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="header">Header</div>
-    <main class="content">Content</main>
-    <footer class="footer">Footer</footer>
+    <div class="search-container">
+        <label for="search">Search</label>
+        <input type="search" id="search">
+    </div>
 </body>
 </html>
