--- a/D6/index.html
+++ b/D6/index.html
@@ -9,9 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="search-container">
+    <form class="search-container">
         <label for="search">Search</label>
         <input type="search" id="search">
-    </div>
+    </form>
 </body>
 </html>
